<resources>
    <string name="app_name">Koshka</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="add_content">Add</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="user_name">Санжарбек✊</string>
    <string name="edit_profile">Edit Profile</string>
</resources>